--- a/myticket.html
+++ b/myticket.html
@@ -23,7 +23,7 @@
 
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link" href="#artistas">Artistas</a>
+                        <a class="nav-link" href="home.html#artistas">Artistas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="tickets.html">Comprá Tickets</a>
